WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
173496
REGRESSION (
r213126
): Sync XHR needs partition for cache and credentials
https://bugs.webkit.org/show_bug.cgi?id=173496
Summary
REGRESSION (r213126): Sync XHR needs partition for cache and credentials
Alex Christensen
Reported
2017-06-16 14:21:37 PDT
REGRESSION (
r213126
): Sync XHR needs partition for cache and credentials
Attachments
Patch
(3.75 KB, patch)
2017-06-16 14:23 PDT
,
Alex Christensen
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2017-06-16 14:23:13 PDT
Created
attachment 313133
[details]
Patch
Alex Christensen
Comment 2
2017-06-16 14:43:14 PDT
http://trac.webkit.org/r218416
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug