REGRESSION (r213126): Sync XHR needs partition for cache and credentials https://bugs.webkit.org/show_bug.cgi?id=173496 <rdar://problem/31943596>

Reviewed by Darin Adler.

Source/WebCore:

Test: http/tests/security/sync-xhr-partition.html

* xml/XMLHttpRequest.cpp:
(WebCore::XMLHttpRequest::createRequest):

LayoutTests:

* http/tests/security/sync-xhr-partition-expected.txt: Added.
* http/tests/security/sync-xhr-partition.html: Added.



Canonical link: https://commits.webkit.org/190367@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@218416 268f45cc-cd09-0410-ab3c-d52691b4dbfc